--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.0
 cryptography==41.0.7
+cycler==0.12.1
 DateTime==5.4
 Deprecated==1.2.14
 dnspython==2.4.2
@@ -15,6 +17,7 @@ Flask==3.0.0
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.1.1
+fonttools==4.47.2
 gevent==23.9.1
 greenlet==3.0.2
 grequests==0.7.0
@@ -22,19 +25,28 @@ h11==0.14.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
+matplotlib==3.8.2
+numpy==1.26.3
 outcome==1.3.0.post0
 packaging==23.2
+pandas==2.1.4
+pillow==10.2.0
 pycparser==2.21
 PyGithub==2.1.1
 PyJWT==2.8.0
 pymongo==4.6.1
 PyNaCl==1.5.0
+pyparsing==3.1.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.4
 selenium==4.16.0
 setuptools==69.0.3
 six==1.16.0
@@ -42,9 +54,11 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.23
+threadpoolctl==3.2.0
 trio==0.23.2
 trio-websocket==0.11.1
 typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.1.0
 webdriver-manager==4.0.1
 Werkzeug==3.0.1
